# codexdominion-schemas

./: .canary-config.yml  .clinerules  .cursorrules  .dockerignore  .dockerignore.flask  .editorconfig  .env.3cloud.example  .env.dashboard.production  .env.development  .env.example  .env.ionos.example  .env.production  .env.production.template  .env.staging  .env.yaml  .eslintrc.js  .gcloudignore  .gitattributes  .gitignore  .gitlab-ci.yml  .governance.yml  .mcp-system-status.json  .pre-commit-config.yaml  .rollback-plan.yml  .terraform.lock.hcl  .tsbuildinfo  .windsurfrules  .yamllint  0.12.0  0.29.0  1.0.0  1.1.0  1.2.0  1.24.0  100_PERCENT_COMPLETE.md  2.0.0  2.100.0  2.3.3  2.32.0  2.8.0  (+1900 more)
.github/: ARCHITECTURE_PATTERNS.md  CODEOWNERS  GOVERNANCE.md  QUICK_REFERENCE.md  SECRETS.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github-secrets/: AZURE_CREDENTIALS.json
.husky/: pre-commit
.schemas/: charter.json  eternalcapsule.json
.streamlit/: config.toml
agents/: avatar.ts
alertmanager/: config.yaml
api/: Dockerfile  main.py  requirements.txt
app/: globals.css  incidents.py  layout.tsx  main.py  package.json  server.js
artifacts/: SUPREME_ARCHIVE_COMPLETE_DOCUMENTATION.md  SUPREME_ETERNAL_REPLAY_ARCHIVE_PROCLAMATION.md  continuum-replay-map-001.json  continuum-replay-map-001.yaml  continuum_replay_map_diagram.py  custodian-reflection-hymn-replay-001.json  custodian-reflection-hymn-replay-001.yaml  eternal-crown-cycle-genesis-001.json  eternal-crown-cycle-genesis-001.yaml  eternal_crown_cycle_diagram.py  eternal_crown_cycle_network_simulation.py  heirs-guided-replay-scroll-001.json  heirs-guided-replay-scroll-001.yaml  omega-benediction-replay-001.json  omega-benediction-replay-001.yaml  supreme-eternal-replay-archive-001.json  supreme-eternal-replay-archive-001.yaml  universal-transmission-hymn-replay-001.json  universal-transmission-hymn-replay-001.yaml
avatars/: custodian-avatar.yaml  heir-avatar.yaml
backend/: .dockerignore  .env.example  ANALYTICS_ENGINE.md  CIRCLES_STATUS.md  CREATOR_ENGINE_STATUS.md  CULTURE_ENGINE_COMPLETE.md  CULTURE_ENGINE_DEPLOYMENT_GUIDE.md  Dockerfile  EVENTS_ENGINE_QUICKSTART.md  EVENTS_ENGINE_STATUS.md  EVENTS_WORKFLOWS.md  EXPANSION_ENGINE_QUICKSTART.md  EXPANSION_ENGINE_STATUS.md  INTELLIGENCE_FORMAT.md  MISSIONS_STATUS.md  README.md  SYSTEM_STATUS.md  TASK_ENGINE_V0_README.md  TEST_ENDPOINTS.md  UPLOADS_GUIDE.md  add-firewall-rules.ps1  codex-test.md  docker-compose.yml  main.py  package-lock.json  package.json  requirements.txt  secrets.json  setup_seals.py  test-alert.json  test-barbados-attendance.ps1  test-create-challenge.ps1  test-server.js  test-task-engine.js  test_audio.py
business/: __init__.py  sovereignty_dashboard.py  woocommerce_dashboard.py
capsules/: final-summary-scroll.yaml
charters/: eternal-harmony-charter.yaml
cloud-function/: main.py
codex-constellation-chart/: Chart.yaml  values.yaml
codex-core/: Cargo.toml  Dockerfile.core
codex-dominion-stack/: Pulumi.yaml
codex-engines-chart/: Chart.yaml  values.yaml
codex-integration/: __init__.py  advanced_technology_learning_system.py  avatar_system.py  capsule_sovereign_activator.py  codex_eternum_omega.py  codex_flow_engine.py  codex_json_validator.py  codex_validator_bundle.py  council_ritual_scroll.py  council_verification_scroll.py  cybersecurity_biotech_extractors.py  digital_empire_orchestrator.py  domain_knowledge_extractors.py  enhanced_multi_domain_learning_system.py  family_ceremony.py  festival_ceremony.py  festival_constellation_ceremony.py  festival_constellation_deck_ceremony.py  final_system_optimizer.py  grand_showcase_ceremony.py  ionos_dominion_manager.py  jermaine_super_action_ai.py  lovable_destroyer.py  master_video_studio_integration.py  multi_domain_learning_system.py  nano_banana_destroyer.py  notebookllm_destroyer.py  precision_300_action_ai.py  replay_annals_constellation_deck.py  replay_annals_entry_deck.py  social_affiliate_empire.py  system_files_status_report.py  system_missing_files_detector.py  system_performance_monitor.py  (+5 more)
(+12537 files in other folders)
